--- a/EmployeeManagement.Web/EmployeeManagement.Web.csproj
+++ b/EmployeeManagement.Web/EmployeeManagement.Web.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\AKSB.Components\AKSB.Components.csproj" />
     <ProjectReference Include="..\EmployeeManagement.Models\EmployeeManagement.Models.csproj" />
   </ItemGroup>
 
